# tsdl

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  build.rs  cliff.toml  justfile
.github/: dependabot.yml  pull_request_template.md
.github/scripts/: cross.sh
.github/workflows/: build.yml  ci.yml  release.yml  test.yml
crates/markdown_to_docs/: Cargo.toml
crates/markdown_to_docs/src/: lib.rs
docs/: contributing.md  release.md
scripts/: post-commit.sh  release.sh
src/: app.rs  args.rs  build.rs  cache.rs  config.rs  consts.rs  display.rs  error.rs  git.rs  lib.rs  lock.rs  logging.rs  main.rs  parser.rs  sh.rs  tree_sitter.rs  walk.rs
src/actors/: cache.rs  display.rs  mod.rs
tests/: cli.rs  config.rs
tests/cmd/: build.rs  cache.rs  config.rs  log.rs  mod.rs
