[package]
authors = ["Firas al-Khalil <firasalkhalil@gmail.com>"]
build = "build.rs"
description = "A downloader/builder of many tree-sitter parsers"
edition = "2021"
name = "tsdl"
version = "1.0.0" # managed by release.sh
license =  "MIT"

[lib]
name = "tsdl"
path = "src/lib.rs"

[[bin]]
name = "tsdl"
path = "src/main.rs"

[package.metadata.tsdl]
build-dir = "tmp"
config = "parsers.toml"
fresh = false
from = "https://github.com/tree-sitter/tree-sitter-"
out = "parsers"
prefix = "libtree-sitter-"
ref = "master"
show-config = false
sys = false

[package.metadata.tree-sitter]
repo = "https://github.com/tree-sitter/tree-sitter"
version = "0.23.0"

[dependencies]
atty = "0.2"
better-panic = "0.3.0"
clap = { version = "4.5", features = ["derive", "cargo"] }
clap-verbosity-flag = "2.2"
console = "0.15"
derive_more = { version = "1.0", features = [
  "as_ref",
  "deref",
  "display",
  "from",
  "from_str",
  "into",
] }
diff-struct = "0.5"
enum_dispatch = "0.3"
figment = { version = "0.10", features = ["toml", "env"] }
human-panic = "2.0.1"
ignore = "0.4"
indicatif = "0.17"
log = "0.4"
miette = { version = "7.2.0", features = ["fancy"] }
num_cpus = "1.16"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = [
  "fs",
  "process",
  "rt-multi-thread",
  "sync",
  "time",
] }
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-error = "0.2"
tracing-log = "0.2"
tracing-subscriber = "0.3"
url = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
indoc = "2"
predicates = "3.1"
pretty_assertions = "1.4"
rstest = "0.22.0"

[build-dependencies]
cargo_metadata = "0.18"
const-str = "0.5"
indoc = "2"
serde_json = "1.0"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing-errors-doc = "allow"
