[workspace]

members = []

[package]
authors = ["Firas al-Khalil <firasalkhalil@gmail.com>"]
build = "build.rs"
description = "A downloader/builder of many tree-sitter parsers"
edition = "2021"
name = "tsdl"
version = "1.5.0" # managed by release.sh
license = "MIT"

[lib]
name = "tsdl"
path = "src/lib.rs"

[[bin]]
name = "tsdl"
path = "src/main.rs"

[package.metadata.tsdl]
build-dir = "tmp"
config = "parsers.toml"
fresh = false
from = "https://github.com/tree-sitter/tree-sitter-"
out = "parsers"
prefix = "libtree-sitter-"
ref = "master"
show-config = false
sys = false

[package.metadata.tree-sitter]
repo = "https://github.com/tree-sitter/tree-sitter"
version = "0.24.7"

[dependencies]
anyhow = "1.0"
async-compression = { version = "0.4.25", features = ["tokio", "gzip"] }
atty = "0.2"
better-panic = "0.3.0"
clap = { version = "4.5", features = ["cargo", "derive", "env"] }
clap-verbosity-flag = "3.0"
console = "0.16"
derive_more = { version = "2.0", features = [
  "as_ref",
  "deref",
  "display",
  "from",
  "from_str",
  "into",
] }
diff-struct = "0.5"
enum_dispatch = "0.3"
figment = { version = "0.10", features = ["toml", "env"] }
human-panic = "2.0.1"
ignore = "0.4"
indicatif = "0.17"
log = "0.4"
num_cpus = "1.17"
reqwest = { version = "0.12.20", default-features = false, features = [
  "http2",
  "rustls-tls",
] }
self_update = { version = "0.42.0", default-features = false, features = [
  "compression-flate2",
  "rustls",
] }
semver = "1.0.23"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.20.0"
thiserror = "2"
tokio = { version = "1", features = [
  "fs",
  "process",
  "rt-multi-thread",
  "sync",
  "time",
] }
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-error = "0.2"
tracing-log = "0.2"
tracing-subscriber = "0.3"
url = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
indoc = "2"
predicates = "3.1"
pretty_assertions = "1.4"
rstest = "0.25.0"

[build-dependencies]
cargo_metadata = "0.20"
const-str = "0.6"
indoc = "2"
serde_json = "1.0"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing-errors-doc = "allow"
