[workspace]

members = []

[package]
authors = ["Firas al-Khalil <firasalkhalil@gmail.com>"]
build = "build.rs"
description = "A downloader/builder of many tree-sitter parsers"
edition = "2021"
name = "tsdl"
version = "1.5.0" # managed by release.sh
license = "MIT"

[lib]
name = "tsdl"
path = "src/lib.rs"

[[bin]]
name = "tsdl"
path = "src/main.rs"

[package.metadata.tsdl]
build-dir = "tmp"
cache-file = "cache.toml"
config-file = "parsers.toml"
force = false
fresh = false
from = "https://github.com/tree-sitter/tree-sitter-"
lock-file = "tsdl.lock"
out-dir = "parsers"
prefix = "libtree-sitter-"
ref = "master"
show-config = false
sys = false

[package.metadata.tree-sitter]
ref = "0.24.7"
repo = "https://github.com/tree-sitter/tree-sitter"

[dependencies]
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
atty = "0.2"
better-panic = "0.3"
clap = { version = "4.5", features = ["cargo", "derive", "env"] }
clap-verbosity-flag = "3.0"
console = "0.16"
derive_more = { version = "2.1", features = [
  "as_ref",
  "deref",
  "display",
  "from",
  "from_str",
  "into",
] }
diff-struct = "0.5"
enum_dispatch = "0.3"
figment = { version = "0.10", features = ["toml", "env"] }
human-panic = "2.0"
ignore = "0.4"
indicatif = "0.18"
log = "0.4"
num_cpus = "1.17"
reqwest = { version = "0.12", default-features = false, features = [
  "http2",
  "rustls-tls",
] }
sha1 = "0.10"
self_update = { version = "0.42", default-features = false, features = [
  "compression-flate2",
  "rustls",
] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.37"
tempfile = "3.20"
tokio = { version = "1", features = [
  "fs",
  "process",
  "rt-multi-thread",
  "sync",
  "time",
] }
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-error = "0.2"
tracing-log = "0.2"
tracing-subscriber = "0.3"
url = "2.5"

[dev-dependencies]
anyhow = "1.0"
assert_cmd = "2.0"
assert_fs = "1.1"
indoc = "2"
predicates = "3.1"
pretty_assertions = "1.4"
rstest = "0.26"

[build-dependencies]
cargo_metadata = "0.23"
const-str = "0.7"
indoc = "2"
serde_json = "1.0"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing-errors-doc = "allow"
